# Mento

./: Jenkinsfile  README.md
ai/skin-analysis/NIA/: .dockerignore  Dockerfile  README.md  check_all_performance.py  convert_to_onnx.py  diagnosis_report.md  preprocess_dataset_mediapipe.py  pyproject.toml  requirements.docker.txt  requirements.txt  requirements_legacy(python3.9).txt
ai/skin-analysis/NIA/app/: main.py  server.py
ai/skin-analysis/NIA/app/analysis/: check_correlation.py  generate_stats.py  inference.py  scoring.py  service_inference.py
ai/skin-analysis/NIA/app/resources/: calibration_rules.json  reference_stats.json
ai/skin-analysis/NIA/backup/: README.md  analyze_service_scores.py  check_onnx_performance.py  convert_to_quant.py  inspect_model.py  main.py  model_analysis_report.md  performance_eda.ipynb  project_structure.md  service_logic_proposal.md  summarize_metrics.py  summary.md  test_api.py  verify_distribution.py
ai/skin-analysis/NIA/core/: data_loader.py  img_crop.py  main.py  model.py  test.py  train_skintype.py  utils.py
ai/skin-analysis/NIA/docs/: diagnosis_report.md  performance_report.md  project_eda.ipynb
ai/skin-analysis/NIA/experiments/analysis/: benchmark_onnx.py
ai/skin-analysis/NIA/experiments/debug/: debug_crop_alignment.py  optimize_alignment.py
ai/skin-analysis/NIA/experiments/optimization/: convert_to_onnx_static.py  optimize_for_c4.py  optimize_transformer.py  prune_and_export.py  quantize_models.py
ai/skin-analysis/NIA/experiments/research/: calibration.py  pytorch_inference.py
ai/skin-analysis/NIA/experiments/test/: test_service_inference.py
ai/skin-analysis/NIA/scripts/: calculate_thresholds.py  convert_to_onnx.py  preprocess_dataset_mediapipe.py
ai/skin-analysis/NIA/tool/: data_loader.py  main.py  model.py  server.py  test.py
ai/skin-analysis/NIA/torchvision/: __init__.py
ai/summary-service/: main.py  pyproject.toml
(+868 files in other folders)
