[project]
name = "kkk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.2",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "mediapipe>=0.10.32",
    "numpy>=2.4.2",
    "onnx>=1.20.1",
    "onnxconverter-common>=1.16.0",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.6.0",
    "opencv-python-headless>=4.13.0.90",
    "pillow>=12.1.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "uvicorn>=0.40.0",
]
