[project]
name = "kkk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cmake>=4.2.1",
    "einops>=0.8.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "mediapipe>=0.10.14",
    "numpy>=1.26.4",
    "onnx>=1.16.0",
    "onnxconverter-common>=1.14.0",
    "onnxruntime>=1.17.0",
    "onnxscript>=0.1.0",
    "opencv-python-headless>=4.9.0",
    "pillow>=10.2.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "timm>=1.0.9",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "uvicorn>=0.29.0",
    "wandb>=0.24.2",
]
